add link to dask.do notebook in index

--- a/index.ipynb
+++ b/index.ipynb
@@ -9,7 +9,8 @@
     "\n",
     "As an experimental service, some of these notebooks can be run live.  This is thanks to the [binder project](http://mybinder.org/).\n",
     "\n",
-    "1.  [Time Series and Dask DataFrame](time-series.ipynb)"
+    "1.  [Time Series and Dask DataFrame](time-series.ipynb)\n",
+    "2.  [Dask do](do-and-profiler.ipynb)"
    ]
   }
  ],
