--- a/index.ipynb
+++ b/index.ipynb
@@ -10,7 +10,8 @@
     "As an experimental service, some of these notebooks can be run live.  This is thanks to the [binder project](http://mybinder.org/).\n",
     "\n",
     "1.  [Time Series and Dask DataFrame](time-series.ipynb)\n",
-    "2.  [Dask do](do-and-profiler.ipynb)"
+    "2.  [Dask do](do-and-profiler.ipynb)\n",
+    "3.  [NYC Taxi 2013](nyctaxi-2013.ipynb)"
    ]
   }
  ],
