--- a/nyctaxi-2013.ipynb
+++ b/nyctaxi-2013.ipynb
@@ -42,6 +42,7 @@
    },
    "outputs": [],
    "source": [
+    "# This takes about a minute\n",
     "!tar -xf tripdata.castra.tar"
    ]
   },
@@ -61,17 +62,7 @@
    "outputs": [],
    "source": [
     "import dask.dataframe as dd\n",
-    "df = dd.from_castra('tripdata.castra/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "df = dd.from_castra('tripdata.castra/')\n",
     "df.head()"
    ]
   },
@@ -79,7 +70,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up progress bar"
+    "### Set up progress bar\n",
+    "\n",
+    "This lets us know how long our `dask.dataframe` computations take."
    ]
   },
   {
@@ -110,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "df.passenger_count.value_counts.compute()"
+    "df.passenger_count.value_counts().compute()"
    ]
   }
  ],
