update link.  add hourly plot

--- a/nyctaxi-2013.ipynb
+++ b/nyctaxi-2013.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "!wget  https://storage.googleapis.com/blaze-data/nyc-taxi-trips/tripdata.castra.tar"
+    "!wget  https://storage.googleapis.com/blaze-data/nyc-taxi/castra/nyc-taxi-2013.castra.tar"
    ]
   },
   {
@@ -92,7 +92,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Play"
+    "## Play\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How many passengers per ride?"
    ]
   },
   {
@@ -104,6 +112,61 @@
    "outputs": [],
    "source": [
     "df.passenger_count.value_counts().compute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How many medallions on the road per day?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "df.medallion.resample('1d', how='nunique').compute().plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lets consider this per hour\n",
+    "\n",
+    "We'll have to switch from matplotlib to bokeh so that we can zoom around"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hourly = df.medallion.resample('1h', how='nunique').compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.charts import TimeSeries, output_notebook, show\n",
+    "output_notebook()\n",
+    "\n",
+    "fig = TimeSeries(hourly.values, hourly.index, title='Cabs on the road',\n",
+    "                 xlabel='Time', ylabel='Number of cabs')\n",
+    "show(fig)"
    ]
   }
  ],
