fix tar command in nyctaxi

--- a/nyctaxi-2013.ipynb
+++ b/nyctaxi-2013.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "### Download and untar\n",
     "\n",
-    "This should take less than two minutes"
+    "This should take less than two minutes if running on Google Compute Engine (via binder.)  If running on your own hardware then please be mindful of repeated downloads.  (Moving this dataset outside of the cloud costs us about $1.)"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# This takes about a minute\n",
-    "!tar -xf tripdata.castra.tar"
+    "!tar -xf nyc-taxi-2013.castra.tar"
    ]
   },
   {
