add dask array basics

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,8 @@
     "\n",
     "1.  [Time Series and Dask DataFrame](time-series.ipynb)\n",
     "2.  [Dask do](do-and-profiler.ipynb)\n",
-    "3.  [NYC Taxi 2013](nyctaxi-2013.ipynb)"
+    "3.  [NYC Taxi 2013](nyctaxi-2013.ipynb)\n",
+    "4.  [Dask Array Basics](dask-array-basics.ipynb)"
    ]
   }
  ],
