--- a/index.ipynb
+++ b/index.ipynb
@@ -11,27 +11,28 @@
     "\n",
     "1.  [Time Series and Dask DataFrame](time-series.ipynb)\n",
     "2.  [Dask do](do-and-profiler.ipynb)\n",
-    "3.  [NYC Taxi 2013](nyctaxi-2013.ipynb)"
+    "3.  [NYC Taxi 2013](nyctaxi-2013.ipynb)\n",
+    "4.  [Github Data with Dask Bag](github data.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
