--- a/index.ipynb
+++ b/index.ipynb
@@ -13,27 +13,28 @@
     "2.  [Dask do](do-and-profiler.ipynb)\n",
     "3.  [NYC Taxi 2013](nyctaxi-2013.ipynb)\n",
     "4.  [Dask Array Basics](dask-array-basics.ipynb)\n",
-    "5.  [Github Data and Dask Bag](github-data.ipynb)"
+    "5.  [Dask Dataframe Basics](dask-dataframe-basics.ipynb)\n",
+    "6.  [Github Data and Dask Bag](github-data.ipynb)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
