Add hubble notebook to index.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,6 +15,7 @@
     "4.  [Dask Array Basics](dask-array-basics.ipynb)\n",
     "5.  [Dask Dataframe Basics](dask-dataframe-basics.ipynb)\n",
     "6.  [Github Data and Dask Bag](github-data.ipynb)"
+    "7.  [Hubble Image Analysis with Dask Array's Ghost Cells](hubble.ipynb)"
    ]
   }
  ],
