Update hubble notebook for binder.

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,7 +14,8 @@
     "3.  [NYC Taxi 2013](nyctaxi-2013.ipynb)\n",
     "4.  [Dask Array Basics](dask-array-basics.ipynb)\n",
     "5.  [Dask Dataframe Basics](dask-dataframe-basics.ipynb)\n",
-    "6.  [Github Data and Dask Bag](github-data.ipynb)"
+    "6.  [Github Data and Dask Bag](github-data.ipynb)\n",
+    "7.  [Hubble Image Analysis with Dask Array's Ghost Cells](hubble.ipynb)"
    ]
   }
  ],
