--- a/nyctaxi-2013.ipynb
+++ b/nyctaxi-2013.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -167,6 +167,94 @@
     "fig = TimeSeries(hourly.values, hourly.index, title='Cabs on the road',\n",
     "                 xlabel='Time', ylabel='Number of cabs')\n",
     "show(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we will visualize the pickup locations. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df2 = df.sample(frac=0.0001)\n",
+    "# Remove some outliers\n",
+    "df3 = df2[(df2.pickup_latitude > 40) &\n",
+    "          (df2.pickup_latitude < 42) & \n",
+    "          (df2.pickup_longitude > -75) & \n",
+    "          (df2.pickup_longitude < -72)]\n",
+    "pickup = df3[['pickup_latitude', 'pickup_longitude']]\n",
+    "\n",
+    "\n",
+    "result = pickup.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.plotting import figure, show\n",
+    "\n",
+    "p = figure(title=\"Pickup Locations\")\n",
+    "p.scatter(result.pickup_longitude, result.pickup_latitude, size=3, alpha=0.2, notebook=True)\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we plot a histogram of the distances travelled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "km_per_degree_latitude = 110.0  # at 40 degrees \n",
+    "km_per_degree_longitude = 85.0  # from http://www.csgnetwork.com/degreelenllavcalc.html\n",
+    "\n",
+    "with ProgressBar():\n",
+    "    distance = ((km_per_degree_latitude * (df3.pickup_latitude - df3.dropoff_latitude))**2\n",
+    "              + (km_per_degree_longitude * (df3.pickup_longitude - df3.dropoff_longitude))**2)**0.5\n",
+    "    hist = (distance // 1).value_counts().compute().sort_index()  # truncate then count\n",
+    "hist.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p = figure(title=\"Binned distance frequencies (degrees)\",\n",
+    "           y_axis_type=\"log\")\n",
+    "p.line(hist.loc[:100].index.values, hist.loc[:100].values)\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice the interesting spikes around 20 kms, these are probably trips to the airport."
    ]
   }
  ],
