Update github data notebook.

--- a/github-data.ipynb
+++ b/github-data.ipynb
@@ -23,11 +23,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove 'github-data.tar': No such file or directory\n",
+      "converted 'https://storage.googleapis.com/blaze-data/github-data/github-data.tar' (ANSI_X3.4-1968) -> 'https://storage.googleapis.com/blaze-data/github-data/github-data.tar' (UTF-8)\n",
+      "--2015-09-24 21:58:41--  https://storage.googleapis.com/blaze-data/github-data/github-data.tar\n",
+      "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.69.128, 2607:f8b0:4001:c08::80\n",
+      "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.69.128|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 2822236160 (2.6G) [application/x-tar]\n",
+      "Saving to: 'github-data.tar'\n",
+      "\n",
+      "github-data.tar     100%[=====================>]   2.63G  72.2MB/s   in 38s    \n",
+      "\n",
+      "2015-09-24 21:59:19 (71.3 MB/s) - 'github-data.tar' saved [2822236160/2822236160]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!rm github-data.tar\n",
     "!wget  https://storage.googleapis.com/blaze-data/github-data/github-data.tar"
@@ -35,24 +55,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!tar xf github-data.tar"
+    "!tar xf github-data.tar  # takes about a minute"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7G\tdata/\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!du -h data/  # 4.6GB"
+    "!du -h data/"
    ]
   },
   {
@@ -66,29 +94,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dask.diagnostics import ProgressBar\n",
     "import dask.bag as db\n",
     "import ujson as json\n",
     "\n",
-    "# take one file from the bucket load it as a json object, not gz decompression\n",
+    "# take one file from the bucket load it as a json object, note gz decompression\n",
     "# happens automatically at compute time.\n",
-    "b = db.from_filenames('data/2015-*.json.gz').map(json.loads)\n",
+    "b = db.from_filenames('data/2015-01-01-*').map(json.loads)\n",
     "b.npartitions  # number of files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'actor': {u'avatar_url': u'https://avatars.githubusercontent.com/u/9152315?',\n",
+       "  u'gravatar_id': u'',\n",
+       "  u'id': 9152315,\n",
+       "  u'login': u'davidjhulse',\n",
+       "  u'url': u'https://api.github.com/users/davidjhulse'},\n",
+       " u'created_at': u'2015-01-01T00:00:00Z',\n",
+       " u'id': u'2489368070',\n",
+       " u'payload': {u'before': u'86ffa724b4d70fce46e760f8cc080f5ec3d7d85f',\n",
+       "  u'commits': [{u'author': {u'email': u'david.hulse@live.com',\n",
+       "     u'name': u'davidjhulse'},\n",
+       "    u'distinct': True,\n",
+       "    u'message': u'Altered BingBot.jar\\n\\nFixed issue with multiple account support',\n",
+       "    u'sha': u'a9b22a6d80c1e0bb49c1cf75a3c075b642c28f81',\n",
+       "    u'url': u'https://api.github.com/repos/davidjhulse/davesbingrewardsbot/commits/a9b22a6d80c1e0bb49c1cf75a3c075b642c28f81'}],\n",
+       "  u'distinct_size': 1,\n",
+       "  u'head': u'a9b22a6d80c1e0bb49c1cf75a3c075b642c28f81',\n",
+       "  u'push_id': 536740396,\n",
+       "  u'ref': u'refs/heads/master',\n",
+       "  u'size': 1},\n",
+       " u'public': True,\n",
+       " u'repo': {u'id': 28635890,\n",
+       "  u'name': u'davidjhulse/davesbingrewardsbot',\n",
+       "  u'url': u'https://api.github.com/repos/davidjhulse/davesbingrewardsbot'},\n",
+       " u'type': u'PushEvent'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first = b.take(1)[0]  # take the first json object from the file\n",
     "first"
@@ -96,11 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'payload', u'created_at', u'actor', u'public', u'repo', u'type', u'id']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first.keys()  # top level keys in this json object"
    ]
@@ -114,11 +198,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 14.4s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(u'ReleaseEvent', 816),\n",
+       " (u'PublicEvent', 177),\n",
+       " (u'PullRequestReviewCommentEvent', 2173),\n",
+       " (u'ForkEvent', 7144),\n",
+       " (u'MemberEvent', 474),\n",
+       " (u'PullRequestEvent', 8735),\n",
+       " (u'IssueCommentEvent', 17045),\n",
+       " (u'PushEvent', 119242),\n",
+       " (u'DeleteEvent', 3843),\n",
+       " (u'CommitCommentEvent', 1399),\n",
+       " (u'WatchEvent', 21939),\n",
+       " (u'IssuesEvent', 9843),\n",
+       " (u'CreateEvent', 23913),\n",
+       " (u'GollumEvent', 2196)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with ProgressBar():\n",
     "    res = b.pluck('type').frequencies().compute()\n",
@@ -144,11 +259,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 13.7s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(u'kinlane', 3843),\n",
+       " (u'KenanSulayman', 1912),\n",
+       " (u'mirror-updates', 1008),\n",
+       " (u'qdm', 702),\n",
+       " (u'greatfire', 576)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pushes = b.filter(lambda x: x['type'] == 'PushEvent')  # filter out the push events\n",
     "names = pushes.pluck('actor').pluck('login') # get the login names\n",
@@ -171,12 +308,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 12.5s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(u'mirror-updates', 9912),\n",
+       " (u'kinlane', 3843),\n",
+       " (u'KenanSulayman', 1912),\n",
+       " (u'qdm', 703),\n",
+       " (u'greatfire', 576)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_logins(x):\n",
     "    \"\"\"The key for foldby, like a groupby key. Get the username from a PushEvent\"\"\"\n",
@@ -195,6 +354,14 @@
     "with ProgressBar():\n",
     "    res = top_commits.compute()\n",
     "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can verify this by visiting some of these github profiles:\n",
+    "[kinlane](https://github.com/qdm), [KenanSulayman](https://github.com/KenanSulayman), [qdm](https://github.com/qdm). The \"mirror-updates\" user doesn't actually show any activity on these days."
    ]
   }
  ],
