Fix blaze image in time-series notebook.

--- a/time-series.ipynb
+++ b/time-series.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=http://blaze.github.io/images/blaze_med.png align=right>\n",
+    "<img src=http://blaze.github.io/images/blaze.png align=right>\n",
     "\n",
     "Time Series with dask.dataframe\n",
     "==================\n",
