Fix spelling mistake

--- a/dask-array-basics.ipynb
+++ b/dask-array-basics.ipynb
@@ -256,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use `.compute()` to craete a numpy array\n",
+    "### Use `.compute()` to create a numpy array\n",
     "\n",
     "As we've already seen, the `.compute()` method performs computation and turns our lazily evaluated `da.Array` into a NumPy ndarray."
    ]
